@@ -4,64 +4,126 @@ require_once(D_ROOT . "/reou/models/database.php");
 require(D_ROOT . '/reou/helpers/users_helper.php');
 require(D_ROOT . '/reou/helpers/courses_helper.php');
 require(D_ROOT . '/reou/controllers/routes.php');
-require(D_ROOT . "/reou/models/User.php");
+require(D_ROOT . '/reou/models/User.php');
 
 
 
 // --------------- signin.php ---------------------
-function signin($ObjectPDO) {
+function sign_in($ObjectPDO, $params) {
 
-	if ( $_SERVER['REQUEST_METHOD'] == "POST" && isset($_POST['email']) 
-		&& isset($_POST['password'])) {
+	if($_SERVER['REQUEST_METHOD'] == "POST") {
 
-		// -------- Load POST Variables -------- //
-		$params = array();
-		$params['email'] = $_POST['email'];
-		$params['password'] = $_POST['password'];
+		// ---------- If Sign in Successful ----------
+		if(isset($params['email']) && isset($params['password'])) {
 
-
-		// -------- Attempt To Sign in -------- //
-		$user = new User($db);
-		$results = $user->sign_in($params); 
-
-		// -------- Load Sesion Variables -------- //
-		// "id","first_name", "last_name", "address", "city", "state", 
-		//"zip", "phone", "email", "licensed", "type", "bio", "active", "title"
-
-		if ($results) {
-			session_start();
-			foreach($results[0] as $k => $v) {
-				$_SESSION[$k] = $v;
-
+			// If the User is already signed in, take to another page
+			if( userSignedIn() ) {
+				header("Location:". course_route('course_category') );
+				// header("Location:". $_SERVER['HTTP_REFERER'] );
+				die();
 			}
-		}
+
+			$user = new User($ObjectPDO);
+
+			// If sign-in is successful, take to another page
+			if( $results = $user->sign_in($params) ) {
+				
+				session_start();
+
+				//session variable names are same as column names in table.
+				foreach ($results[0] as $k => $v) {
+					$_SESSION[$k] = $v;
+				}
+
+				//bring to course category page
+				header("location:". course_route('course_category'));
+			} 
+			else {
+				User::$message['alert'] = "Username or password incorrect";
+			}
+
+		} 
+		else {
+			User::$message['alert'] = "User name or password is empty";
+		}	
+
 	}
+
+
 }
+
+// function signin($ObjectPDO) {
+
+// 	if ( $_SERVER['REQUEST_METHOD'] == "POST" && isset($_POST['email']) 
+// 		&& isset($_POST['password'])) {
+
+// 		// -------- Load POST Variables -------- //
+// 		$params = array();
+// 		$params['email'] = $_POST['email'];
+// 		$params['password'] = $_POST['password'];
+
+
+// 		// -------- Attempt To Sign in -------- //
+// 		$user = new User($db);
+// 		$results = $user->sign_in($params); 
+
+// 		// -------- Load Sesion Variables -------- //
+// 		// "id","first_name", "last_name", "address", "city", "state", 
+// 		//"zip", "phone", "email", "licensed", "type", "bio", "active", "title"
+
+// 		if ($results) {
+// 			session_start();
+// 			foreach($results[0] as $k => $v) {
+// 				$_SESSION[$k] = $v;
+
+// 			}
+// 		}
+// 	}
+// }
 
 // --------------- signup.php ---------------------
 
-function create($ObjectPDO) {
+function sign_up($ObjectPDO, $params) {
 	require_once($_SERVER['DOCUMENT_ROOT'] . "/reou/includes/const.php");
 	require_once(D_ROOT . "/reou/helpers/users_helper.php");
 
-	if ( $_SERVER['REQUEST_METHOD'] == "POST" && signin_check_post_params()) {
+
+
+	// If signed in bring to course category page
+	if(userSignedIn()) {
+		header("Location:".course_route('course_category') );
+		die();
+	}
+
+	if ( $_SERVER['REQUEST_METHOD'] == "POST") {
 
 		$params = $_POST;
 		$user = new User($ObjectPDO);
 
 		try {
-			$results = $user->create_user($params);
-		} 
 
+			if($user->create_user($params)) {
+
+				//header("Location:". course_route('course_category'));
+
+				sign_in($ObjectPDO, $params);
+
+			} else {
+				User::$message['alert'] = "This user already exists";
+			}
+
+		} 
 		catch (Exception $e) {
 			// This needs to be an error message
-			echo("There was a porblem creating the user check sigup.php");
+			die("There was a porblem creating the user check sigup.php");
 			$e->getMessage();
 		}
 
 		// header("location: ../views/courses/course_category.php");
 	}
 }
+
+
 
 
 // --------------------------------- edit.php -----------------------------
@@ -72,6 +134,8 @@ function edit($ObjectPDO) {
 	// }
 
 }
+
+
 
 function my_courses($ObjectPDO) {
 	//The student ID will be received by the user session
@@ -87,31 +151,9 @@ function my_courses($ObjectPDO) {
 	$course_detail = $results[0];
 
 	return $results;
-
 }
 
-function sign_in($ObjectPDO, $params) {
 
-	if(isset($params['email']) && isset($params['password'])) {
-
-			$user = new User($ObjectPDO);
-			$results = $user->sign_in($params);
-
-			session_start();
-
-			//session variable names are same as column names in table.
-			foreach ($results[0] as $k => $v) {
-				$_SESSION[$k] = $v;
-			}
-
-			//or perhaps take them to the splash page.
-			header("location:". course_route('course_category'));
-
-	} else {
-		echo "User name or password is empty";
-	}	
-
-}
 
 
 ?>
