@@ -1,20 +1,5 @@
 <?php
 
-	function signin_check_post_params() {
-		$params = array("firstName", "lastName", "email", "password");
-
-		foreach ($params as $v) {
-
-			if(isset($_POST[$v])) {
-				continue;
-			} 
-			else {
-				return false;
-			}
-		}
-		return true;
-	} // end
-
 
 	function userSignedIn() {
 
@@ -29,6 +14,16 @@
 		}
 		// check if a session variable is set
 		// Return true or false
+	}
+
+
+	function display_alert($type) {
+		if ( isset(User::$message[$type]) ) {
+			echo User::$message[$type];
+			User::$message[$type] == "";
+		} else {
+			return false;
+		}
 	}
 
 
