@@ -1,24 +1,13 @@
 <?php
 	require($_SERVER['DOCUMENT_ROOT'] . '/reou/controllers/courses_controller.php');
 	$categories = course_category($db);
-
-	// ---------- Testing ---------------
-
-	if(userSignedIn()) {
-
-		// Debug - Remove this
-		var_dump($_SESSION);
-		// debug remove this
-		echo "Signed in? : Yes - Hello" . $_SESSION['first_name'];
-	} else {
-		echo "Signed In? : No";
-	}
-
-	// ----------------------------------
 ?>
+
 	<link rel="stylesheet" type="text/css" href="../css/main.css">
 
 	<div class="wrap">
+
+		<!-- Show Course Categories -->
 		<?php  foreach ($categories as $k => $category) { ?>
 
 			<div class="courses__box">
@@ -30,12 +19,23 @@
 			</div>
 
 			<br />
+
 		<?php } ?>
+
 	</div>
 
-	<a href="<?php echo user_route('sign-out') ?>"> Sign out </a> <br />
-	<a href="<?php echo user_route('sign-in') ?>"> Sign In </a> <br />
-	<a href="<?php echo user_router('my-courses')?>"> My Courses </a>
 
+	<!-- Sign in and Sign Out Links -->
+	<?php if(userSignedIn()) { ?>
 
-</div>
+		<a href="<?php echo user_route('sign-out') ?>"> Sign out </a> <br />
+		<a href="<?php echo user_route('my-courses') ?>"> My Courses </a> <br />
+
+	<?php } else { ?>
+
+		<a href="<?php echo user_route('sign-in') ?>"> Sign In </a> <br />
+
+	<?php } ?>
+
+		<a href="<?php echo user_router('my-courses')?>"> My Courses </a>
+		
