@@ -73,3 +73,8 @@ ALTER TABLE `users` CHANGE `student_id` `id` INT(11) NOT NULL AUTO_INCREMENT;
 
 [13. Add id column]
 ALTER TABLE `students_courses` ADD COLUMN `id` INT PRIMARY KEY NOT NULL AUTO_INCREMENT FIRST;
+
+[14ish. Rename column student_id to user_id] ** this has not been truly added yet
+ALTER TABLE `reou`.`students_courses` 
+CHANGE COLUMN `student_id` `user_id` INT(11) NOT NULL COMMENT '' ;
+
